<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="14dp"
    android:paddingBottom="14dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:background="@drawable/card_background">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/widget_type_of_start"
        android:textSize="@dimen/widget_label_text_size"
        android:textColor="@color/colorBlack"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sTypeOfStartDelayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/widget_immediate_starts"
        android:textOn="@string/widget_delayed_starts" />

</LinearLayout>
