<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/card_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widget_unit_time"
        android:textSize="11sp"
        android:textColor="@color/secondaryText"
        android:textAllCaps="true"
        android:letterSpacing="0.05"
        android:fontFamily="sans-serif-medium"
        android:layout_marginBottom="10dp"/>

    <pylapp.smoothclicker.android.views.RadioButtonGroupTableLayout
        android:id="@+id/rgUnitsTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>
            <RadioButton
                android:id="@+id/rbUnitTimeMs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/widget_radio_button_padding"
                android:paddingEnd="@dimen/widget_radio_button_padding"
                android:textSize="@dimen/widget_label_text_size"
                android:text="@string/widget_unit_time_ms" />
            <RadioButton
                android:id="@+id/rbUnitTimeS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/widget_radio_button_padding"
                android:paddingEnd="@dimen/widget_radio_button_padding"
                android:textSize="@dimen/widget_label_text_size"
                android:text="@string/widget_unit_time_s"
                android:checked="true"/>
        </TableRow>
        <TableRow>
            <RadioButton
                android:id="@+id/rbUnitTimeM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/widget_radio_button_padding"
                android:paddingEnd="@dimen/widget_radio_button_padding"
                android:textSize="@dimen/widget_label_text_size"
                android:text="@string/widget_unit_time_m" />
            <RadioButton
                android:id="@+id/rbUnitTimeH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/widget_radio_button_padding"
                android:paddingEnd="@dimen/widget_radio_button_padding"
                android:textSize="@dimen/widget_label_text_size"
                android:text="@string/widget_unit_time_h" />
        </TableRow>
    </pylapp.smoothclicker.android.views.RadioButtonGroupTableLayout>

</LinearLayout>
